Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 1.2k
    • Issues 1.2k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 137
    • Merge requests 137
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #2694
Closed
Open
Issue created Mar 14, 2023 by Kamil Páral@kparal

[44.rc] Crash when using Win+P shortcut

Affected version

Provide at least the following information:

  • Your OS and version: Fedora 38 Beta
  • Affected GNOME Shell version: gnome-shell-44~rc-1.fc38.x86_64
  • Does this issue appear in XOrg and/or Wayland: Wayland, Xorg not tested
  • Does this issue happen without extensions (please follow instructions below): Yes

Bug summary

Every time I use Win+P (Super+P) shortcut to change display configuration, gnome-shell crashes and my whole session is lost. It doesn't matter which option I pick, all of them crash. Configuring my displays in Settings -> Displays works without issues, it's just the Win+P shortcut that's broken.

I have a laptop screen and one external monitor connected through HDMI.

Steps to reproduce

  1. Have several displays
  2. Use Win+P to select a layout
  3. Crash

Relevant logs, screenshots, screencasts etc.

Truncated backtrace:

Thread no. 0 (9 frames)
 #0 set_crtc_cursor at ../src/backends/native/meta-cursor-renderer-native.c:404
 #1 meta_cursor_renderer_native_prepare_frame at ../src/backends/native/meta-cursor-renderer-native.c:584
 #2 meta_stage_native_prepare_frame at ../src/backends/native/meta-stage-native.c:132
 #3 _clutter_stage_window_prepare_frame at ../clutter/clutter/clutter-stage-window.c:128
 #4 handle_frame_clock_frame at ../clutter/clutter/clutter-stage-view.c:1252
 #5 clutter_frame_clock_dispatch at ../clutter/clutter/clutter-frame-clock.c:791
 #6 frame_clock_source_dispatch at ../clutter/clutter/clutter-frame-clock.c:839
 #9 g_main_context_iterate.isra.0 at ../glib/gmain.c:4276
 #11 meta_context_run_main_loop at ../src/core/meta-context.c:482

See the full backtrace in https://bugzilla.redhat.com/show_bug.cgi?id=2177982

Also, there's a very similar backtrace reported against an older version gnome-shell-44~beta-3.fc38 at https://bugzilla.redhat.com/show_bug.cgi?id=2176559

My displays:

$ xrandr 
Screen 0: minimum 16 x 16, current 1920 x 2280, maximum 32767 x 32767
XWAYLAND0 connected primary 1920x1200+0+0 (normal left inverted right x axis y axis) 520mm x 320mm
   1920x1200     59.88*+
   1600x1200     59.87  
   1440x1080     59.87  
   1400x1050     59.86  
   1280x1024     59.76  
   1280x960      59.94  
   1152x864      59.78  
   1024x768      59.68  
   800x600       59.86  
   640x480       59.38  
   320x240       59.52  
   1680x1050     59.85  
   1440x900      59.89  
   1280x800      59.81  
   720x480       59.71  
   640x400       59.20  
   320x200       58.96  
   1920x1080     59.88  
   1600x900      59.82  
   1368x768      59.88  
   1280x720      59.86  
   1024x576      59.90  
   864x486       59.45  
   720x400       59.55  
   640x350       59.77  
XWAYLAND1 connected 1920x1080+0+1200 (normal left inverted right x axis y axis) 340mm x 190mm
   1920x1080     59.96*+
   1440x1080     59.99  
   1400x1050     59.98  
   1280x1024     59.89  
   1280x960      59.94  
   1152x864      59.96  
   1024x768      59.92  
   800x600       59.86  
   640x480       59.38  
   320x240       59.52  
   1680x1050     59.95  
   1440x900      59.89  
   1280x800      59.81  
   720x480       59.71  
   640x400       59.95  
   320x200       58.96  
   1600x900      59.95  
   1368x768      59.88  
   1280x720      59.86  
   1024x576      59.90  
   864x486       59.92  
   720x400       59.55  
   640x350       59.77  
Assignee
Assign to
Time tracking